<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/bem_vindo_login"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/default_10dp_margin"
        android:src="@drawable/ic_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_10dp_margin"
        android:hint="Email"
        app:endIconDrawable="@drawable/ic_baseline_email_24"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/string_senha"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/mantenha_me_conectado"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRememberMe" />

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/default_10dp_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/createRegister" />

    <TextView
        android:id="@+id/createRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Cadastre-se"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>